Refactor for Heroku deployment. Added procfile, requirements, runtime, and assets.

--- a/wit-n-wisdoms.ipynb
+++ b/wit-n-wisdoms.ipynb
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "#import data\n",
-    "quotes = pd.read_csv('wit_and_wisdoms.csv')\n",
+    "quotes = pd.read_csv('assets/wit_and_wisdoms.csv')\n",
     "\n",
     "\n",
     "# construct the sentence transformer\n",
